...
    contentPadding: PaddingValues,
) {
    LazyColumn(
        verticalArrangement = Arrangement.spacedBy(16.dp),
        contentPadding = contentPadding,
        modifier = modifier
            .testTag("list_item")
        ) {
        items(mythologyItem, key = { it.id }) { data ->
            CardItem(
                id = data.id,
                urlImage = data.image,
                title = data.title,
...
