...
                    "\n" +
                    "Hercules menemukan strategi jitu untuk melawan Hydra, yakni memenggal kepalanya, lalu membakar pangkalnya dengan cepat agar tidak bisa beregenerasi. Hercules terus melakukan ini sampai tidak ada kepala yang tersisa, laman Animal Planet menjelaskan.",
            "https://e1.pxfuel.com/desktop-wallpaper/545/16/desktop-wallpaper-hydra-monster-pack-2-for-android-greek-myth-hydra.jpg",
        ),
        Mythology(
            1,
            "Pegasus",
            "Percayakah kamu kalau Pegasus adalah putra dari Poseidon (dewa laut) dan Medusa? Pegasus digambarkan sebagai kuda bersayap yang indah dengan warna putih, terkadang putih dengan sayap emas, atau berwarna emas secara keseluruhan.\n" +
                    "\n" +
                    "Konon, Pegasus lahir dari tetesan darah Medusa setelah kematiannya. Ada pula yang mengatakan bahwa Pegasus melompat keluar dari leher Medusa saat Perseus memenggal kepalanya.\n" +
                    "\n" +
                    "Pegasus digambarkan sebagai makhluk liar dan tidak mengizinkan siapa pun menungganginya. Tetapi, Bellerophon tak kehabisan akal. Ia menggunakan tali kekang emas dari Dewi Athena untuk menjinakkannya.",
            "https://e1.pxfuel.com/desktop-wallpaper/487/741/desktop-wallpaper-pegasus-horse-pegasus.jpg"
...
